[gd_scene load_steps=7 format=3 uid="uid://dc0s3ddmhpk6i"]

[ext_resource type="Script" uid="uid://bphqlqwdxyesb" path="res://addons/gameconsole/console/console/console_template.gd" id="1_rkm11"]
[ext_resource type="Script" uid="uid://blvb02h7wlv8c" path="res://addons/gameconsole/console/console/console_output.gd" id="2_0lla3"]
[ext_resource type="Script" uid="uid://btnbte7vy8nqn" path="res://addons/gameconsole/console/console/autocomplete_label.gd" id="3_331dq"]
[ext_resource type="Script" uid="uid://b3x2r5b4h05sx" path="res://addons/gameconsole/console/console/command_send_button.gd" id="4_7fr1q"]
[ext_resource type="Script" uid="uid://cwvhf66uu5cr0" path="res://addons/gameconsole/console/console/command_enter.gd" id="4_70us0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65uy4"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="CustomConsoleTemplate" type="CanvasLayer" node_paths=PackedStringArray("console_content_output", "console_input", "console_send_button")]
script = ExtResource("1_rkm11")
console_content_output = NodePath("PanelContainer/MarginContainer/VBoxContainer/ConsoleOutput")
console_input = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput")
console_send_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ConsoleSendButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 462.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_65uy4")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ConsoleOutput" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_0lla3")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConsoleAutocomplete" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_331dq")

[node name="ConsoleInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("4_70us0")

[node name="ConsoleSendButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("command_input")]
layout_mode = 2
size_flags_vertical = 8
text = "Go"
script = ExtResource("4_7fr1q")
command_input = NodePath("../VBoxContainer/ConsoleInput")

[connection signal="autocomplete_found" from="." to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleAutocomplete" method="autocompletion_found"]
[connection signal="autocomplete_found" from="." to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" method="autocompletion_found"]
[connection signal="clear_input" from="." to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" method="clear"]
[connection signal="clear_output" from="." to="PanelContainer/MarginContainer/VBoxContainer/ConsoleOutput" method="clear_stored_text"]
[connection signal="is_command_valid" from="." to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" method="is_command_valid"]
[connection signal="output_append" from="." to="PanelContainer/MarginContainer/VBoxContainer/ConsoleOutput" method="append_bbcode_text"]
[connection signal="set_input" from="." to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" method="autocomplete_accepted"]
[connection signal="meta_clicked" from="PanelContainer/MarginContainer/VBoxContainer/ConsoleOutput" to="." method="url_requested"]
[connection signal="autocomplete_accepted" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleAutocomplete" to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" method="autocomplete_accepted"]
[connection signal="meta_clicked" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleAutocomplete" to="." method="url_requested"]
[connection signal="reset_autocomplete" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleAutocomplete" method="force_reset"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" to="." method="autocomplete_requested"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" to="." method="check_if_is_valid_command"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleAutocomplete" method="text_updated"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleInput" to="." method="request_command"]
[connection signal="request_command" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ConsoleSendButton" to="." method="request_command"]
[connection signal="reset_autocomplete" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ConsoleSendButton" to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ConsoleAutocomplete" method="force_reset"]
